[tool.poetry]
name = "audition"
version = "0.0.1"
description = "A Python package for auditory neuroscience."
authors = ["Sam Mathias <samuel.mathias@childrens.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
